<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('pegawai_graji_balken', function (Blueprint $table) {
            $table->id();
            $table->foreignId('id_produksi_graji_balken')
                    ->constrained('produksi_graji_balken')
                    ->cascadeOnUpdate()
                    ->restrictOnDelete();
            $table->foreignId('id_pegawai')
                    ->constrained('pegawais')
                    ->cascadeOnUpdate()
                    ->restrictOnDelete();
            $table->time('masuk');
            $table->time('pulang');
            $table->string('tugas');
            $table->string('ijin')->nullable();
            $table->string('ket')->nullable();
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('pegawai_graji_balken');
    }
};
